welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: not found: value i
    C(i) = getCouleurSol()
      ^